--- a/package.json
+++ b/package.json
@@ -2,13 +2,13 @@
   "name": "bookstoreapp",
   "version": "1.0.0",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "dev": "",
+    "build": " build",
+    "preview": " preview"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.7.0",
-    "vite": "^7.0.5"
+    "@js/plugin-react": "^4.7.0",
+    "": "^7.0.5"
   },
   "dependencies": {
     "react": "^19.1.0",
